StreamsTwoTesting, taskduplicate wurde durch "distinct" methode im Stream gelöst